# Clp

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  ClpBuild.cpp  ClpCholeskyBase.cpp  ClpCholeskyDense.cpp  ClpCholeskyTaucs.cpp  ClpCholeskyUfl.cpp  ClpCholeskyWssmp.cpp  ClpCholeskyWssmpKKT.cpp  ClpDualRowDantzig.cpp  ClpDualRowPivot.cpp  ClpDualRowSteepest.cpp  ClpDummyMatrix.cpp  ClpDynamicExampleMatrix.cpp  ClpDynamicMatrix.cpp  ClpEventHandler.cpp  ClpFactorization.cpp  ClpGubDynamicMatrix.cpp  ClpGubMatrix.cpp  ClpHelperFunctions.cpp  ClpInterior.cpp  ClpLinearObjective.cpp  ClpLsqr.cpp  ClpMatrixBase.cpp  ClpMessage.cpp  ClpModel.cpp  ClpNetworkBasis.cpp  ClpNetworkMatrix.cpp  ClpNonLinearCost.cpp  ClpObjective.cpp  ClpPackedMatrix.cpp  ClpPdco.cpp  ClpPdcoBase.cpp  ClpPlusMinusOneMatrix.cpp  ClpPredictorCorrector.cpp  ClpPresolve.cpp  ClpPrimalColumnDantzig.cpp  (+51 more)
Clp/: AUTHORS  CMakeLists.txt  Dependencies  Makefile.am  Makefile.in  README  clp-uninstalled.pc.in  clp.pc.in  config.h.cmake.in  configure  configure.ac  get.dependencies.sh
Clp/MSVisualStudio/v10/: Clp.sln
Clp/MSVisualStudio/v10/ClpExamplesMinimum/: ClpExamplesMinimum.vcxproj
Clp/MSVisualStudio/v10/ClpExamplesTestBarrier/: ClpExamplesTestBarrier.vcxproj
Clp/MSVisualStudio/v10/ClpExamplesTestQP/: ClpExamplesTestQP.vcxproj
Clp/MSVisualStudio/v10/OsiClpUnitTest/: OsiClpUnitTest.vcxproj
Clp/MSVisualStudio/v10/clp/: clp.vcxproj
Clp/MSVisualStudio/v10/libClp/: libClp.vcxproj
Clp/MSVisualStudio/v10/libOsiClp/: libOsiClp.vcxproj
Clp/MSVisualStudio/v10alt/: Clp.vcxproj  clp.props  genDefForClp.ps1
Clp/MSVisualStudio/v16/libClp/: libClp.sln
Clp/MSVisualStudio/v17/: Clp.sln  ClpTest.cmd
Clp/MSVisualStudio/v17/Clp/: Clp.vcxproj
Clp/MSVisualStudio/v17/ClpExamplesMinimum/: ClpExamplesMinimum.vcxproj
Clp/MSVisualStudio/v17/ClpExamplesTestBarrier/: ClpExamplesTestBarrier.vcxproj
Clp/MSVisualStudio/v17/ClpExamplesTestQP/: ClpExamplesTestQP.vcxproj
Clp/MSVisualStudio/v17/libClp/: libClp.vcxproj
Clp/MSVisualStudio/v17/libOsiClp/: libOsiClp.vcxproj
Clp/MSVisualStudio/v17/osiUnitTest/: osiUnitTest.vcxproj
Clp/MSVisualStudio/v6/: Clp.dsw
Clp/MSVisualStudio/v6/ClpExamplesMinimum/: ClpExamplesMinimum.dsp
Clp/MSVisualStudio/v6/ClpExamplesTestBarrier/: ClpExamplesTestBarrier.dsp
Clp/MSVisualStudio/v6/libClp/: libClp.dsp
Clp/MSVisualStudio/v7/: Clp.sln
Clp/MSVisualStudio/v7/ClpExamplesTestQP/: ClpExamplesTestQP.vcproj
Clp/MSVisualStudio/v7/clp/: clp.vcproj
Clp/MSVisualStudio/v7/libClp/: libClp.vcproj
Clp/MSVisualStudio/v8/: Clp.sln
Clp/MSVisualStudio/v8/ClpExamplesMinimum/: ClpExamplesMinimum.vcproj
Clp/MSVisualStudio/v8/ClpExamplesTestBarrier/: ClpExamplesTestBarrier.vcproj
Clp/MSVisualStudio/v9/: Clp.sln
Clp/MSVisualStudio/v9alt/: Clp.sln  Clp.vcproj  OsiClpUnitTest.vcproj  clp.vsprops  genDefForClp.ps1  libClp.vcproj  libOsiClp.vcproj
Clp/doc/: faqcontent.xml  legal.xml
Clp/doxydoc/: doxygen.conf.in
Clp/examples/: ClpSmallMatrix.cpp  ClpSmallMatrix.hpp  INSTALL  Makefile.anywhere  Makefile.ekk  Makefile.in  addBits.cpp  addColumns.cpp  addRows.cpp  decomp2.cpp  decomp3.cpp  decompose.cpp  defaults.cpp  driver.cpp  driver2.cpp  driver3.cpp  driverC.c  dualCuts.cpp  ekk.cpp  ekk_interface.cpp  findNetwork.cpp  hello.cpp  makeDual.cpp  minimum.cpp  modify.cpp  myPdco.cpp  myPdco.hpp  network.cpp  pdco.cpp  piece.cpp  rowColumn.cpp  spreadSheet.cpp  sprint.cpp  sprint2.cpp  sprintEasy.cpp  sprintEasy2.cpp  sprintGub.cpp  testBarrier.cpp  testBasis.cpp  testGub.cpp  (+4 more)
Clp/inc/: config_clp.h.in
Clp/src/: AbcCommon.hpp  AbcDualRowDantzig.cpp  AbcDualRowDantzig.hpp  AbcDualRowPivot.cpp  AbcDualRowPivot.hpp  AbcDualRowSteepest.cpp  AbcDualRowSteepest.hpp  AbcMatrix.cpp  AbcMatrix.hpp  AbcNonLinearCost.cpp  AbcNonLinearCost.hpp  AbcPrimalColumnDantzig.cpp  AbcPrimalColumnDantzig.hpp  AbcPrimalColumnPivot.cpp  AbcPrimalColumnPivot.hpp  AbcPrimalColumnSteepest.cpp  AbcPrimalColumnSteepest.hpp  AbcSimplex.cpp  AbcSimplex.hpp  AbcSimplexDual.cpp  AbcSimplexDual.hpp  AbcSimplexFactorization.cpp  AbcSimplexFactorization.hpp  AbcSimplexParallel.cpp  AbcSimplexPrimal.cpp  AbcSimplexPrimal.hpp  AbcWarmStart.cpp  AbcWarmStart.hpp  CbcOrClpParam.cpp  CbcOrClpParam.hpp  ClpCholeskyBase.cpp  ClpCholeskyBase.hpp  ClpCholeskyDense.cpp  ClpCholeskyDense.hpp  ClpCholeskyMumps.cpp  ClpCholeskyMumps.hpp  ClpCholeskyPardiso.cpp  ClpCholeskyPardiso.hpp  ClpCholeskyTaucs.cpp  ClpCholeskyTaucs.hpp  (+149 more)
Clp/src/OsiClp/: Makefile.am  Makefile.in  OsiClpConfig.h  OsiClpSolverInterface.cpp  OsiClpSolverInterface.hpp  config_osiclp.h.in  osi-clp-uninstalled.pc.in  osi-clp.pc.in
Clp/test/: CMakeLists.txt  CbcOrClpParam.cpp  CbcOrClpParam.hpp  ClpMain.cpp  ClpTest.cpp  Makefile.am  Makefile.in  MyEventHandler.hpp  MyMessageHandler.cpp  OsiClpSolverInterfaceTest.cpp  osiUnitTest.cpp
src/: AbcCommon.hpp  AbcDualRowDantzig.cpp  AbcDualRowDantzig.hpp  AbcDualRowPivot.cpp  AbcDualRowPivot.hpp  AbcDualRowSteepest.cpp  AbcDualRowSteepest.hpp  AbcMatrix.cpp  AbcMatrix.hpp  AbcNonLinearCost.cpp  AbcNonLinearCost.hpp  AbcPrimalColumnDantzig.cpp  AbcPrimalColumnDantzig.hpp  AbcPrimalColumnPivot.cpp  AbcPrimalColumnPivot.hpp  AbcPrimalColumnSteepest.cpp  AbcPrimalColumnSteepest.hpp  AbcSimplex.cpp  AbcSimplex.hpp  AbcSimplexDual.cpp  AbcSimplexDual.hpp  AbcSimplexFactorization.cpp  AbcSimplexFactorization.hpp  AbcSimplexParallel.cpp  AbcSimplexPrimal.cpp  AbcSimplexPrimal.hpp  AbcWarmStart.cpp  AbcWarmStart.hpp  CMakeLists.txt  CbcOrClpParam.cpp  CbcOrClpParam.hpp  ClpCholeskyBase.cpp  ClpCholeskyBase.hpp  ClpCholeskyDense.cpp  ClpCholeskyMumps.cpp  ClpCholeskyMumps.hpp  ClpCholeskyPardiso.cpp  ClpCholeskyPardiso.hpp  ClpCholeskyTaucs.cpp  ClpCholeskyTaucs.hpp  (+137 more)
src/Attic/: ClpMain.cpp  ClpParam.cpp  ClpParam.hpp  ClpSolver.cpp
src/OsiClp/: CMakeLists.txt  Makefile.am  Makefile.in  OsiClpConfig.h  OsiClpSolverInterface.cpp  OsiClpSolverInterface.hpp  osi-clp.pc.in
test/: Makefile.am  Makefile.in  OsiClpSolverInterfaceTest.cpp  osiUnitTest.cpp  test_racing_lp.cpp  test_racing_reference.txt
(+2939 files in other folders)
